--- a/13_Advanced_Retrieval/Advanced_Retrieval_with_LangChain_Assignment.ipynb
+++ b/13_Advanced_Retrieval/Advanced_Retrieval_with_LangChain_Assignment.ipynb
@@ -168,6 +168,31 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+        "os.environ[\"LANGCHAIN_API_KEY\"] = getpass.getpass(\"LangChain API Key:\")"
+      ],
+      "metadata": {
+        "id": "DIEhe-awFbNc",
+        "outputId": "6010cf2d-e541-4857-8c8e-5f45a58f6e41",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "LangChain API Key:··········\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "B0pDRFEWSXvh"
@@ -542,7 +567,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 36
         },
         "id": "LI-5ueEddku9",
         "outputId": "d60efa11-e613-4d64-c8cb-933ffb3f54c2"
@@ -602,7 +627,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 88
         },
         "id": "lpG6rlvvvKFq",
         "outputId": "e8569972-7654-441e-d6c1-595eb0af2e15"
@@ -762,7 +787,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 88
+          "height": 70
         },
         "id": "w0H7pV_USSMQ",
         "outputId": "1225b0cc-1b44-40db-824e-812927ebc8cc"
@@ -931,7 +956,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 88
         },
         "id": "zn1EqaGqweXN",
         "outputId": "93c0d881-b32b-4a64-cb2e-5a2e0c3831c8"
@@ -1052,7 +1077,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 88
+          "height": 70
         },
         "id": "aAlSthxrRDBC",
         "outputId": "b4dd6a74-2dba-46b4-d086-d7882a6178bf"
@@ -1082,7 +1107,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 88
+          "height": 70
         },
         "id": "Uv1mpCK8REs4",
         "outputId": "5eda402e-181c-44df-89e6-1de230a6ff27"
@@ -1265,7 +1290,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 88
+          "height": 70
         },
         "id": "TXB5i89Zly5W",
         "outputId": "b04f8330-edbc-4cb2-ad88-1a2490998af9"
@@ -1325,7 +1350,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 88
+          "height": 70
         },
         "id": "ZqARszGzvGcG",
         "outputId": "76f7ad84-b287-4548-82df-19286d45fa99"
@@ -1490,7 +1515,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 105
+          "height": 88
         },
         "id": "A7qbHfWgUR4c",
         "outputId": "b5db2e94-2e4f-4370-8c9f-4a1fd43f35a8"
@@ -1694,7 +1719,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 36
         },
         "id": "0lN2j-e4Z0SD",
         "outputId": "7d29aa7e-7769-4647-c2ea-c72c4896fb6e"
@@ -2144,7 +2169,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 710
         },
         "id": "z4sLgb7rhIyh",
         "outputId": "f099f126-30a9-4de9-91d3-6ef3cb8660e6"
@@ -2542,7 +2567,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 90
+          "height": 73
         },
         "id": "h68QjdDphIkl",
         "outputId": "e74c213c-4109-421c-d0c5-78fa7d3fbb8a"
@@ -3019,16 +3044,17 @@
         "display(retrieval_results)"
       ],
       "metadata": {
-        "id": "GlJI3-tFyrmn",
-        "outputId": "7ca1077d-7040-491a-91c5-bde998003ec5",
         "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+          "base_uri": "https://localhost:8080/",
+          "height": 260
+        },
+        "id": "GlJI3-tFyrmn",
+        "outputId": "b8fa6a13-f098-4e00-a420-985db3546d62"
       },
-      "execution_count": 74,
+      "execution_count": 76,
       "outputs": [
         {
-          "output_type": "execute_result",
+          "output_type": "display_data",
           "data": {
             "text/plain": [
               "{'Naive': {'context_recall': 0.8167, 'faithfulness': 0.8018, 'factual_correctness': 0.4650, 'answer_relevancy': 0.8758, 'context_entity_recall': 0.3652, 'noise_sensitivity_relevant': 0.3709},\n",
@@ -3040,16 +3066,155 @@
               " 'Semantic': {'context_recall': 0.5917, 'faithfulness': 0.8428, 'factual_correctness': 0.3440, 'answer_relevancy': 0.7783, 'context_entity_recall': 0.3819, 'noise_sensitivity_relevant': 0.4616}}"
             ]
           },
-          "metadata": {},
-          "execution_count": 74
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Create dataset on langsmith"
+      ],
+      "metadata": {
+        "id": "wsqMLXACD0Si"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langsmith import Client\n",
+        "\n",
+        "client = Client()\n",
+        "\n",
+        "dataset_name = \"John Wick\"\n",
+        "\n",
+        "langsmith_dataset = client.create_dataset(\n",
+        "    dataset_name=dataset_name,\n",
+        "    description=\"John Wick \"\n",
+        ")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 547
+        },
+        "id": "tTyKu2VpyrLo",
+        "outputId": "3f953be4-b677-4728-cb92-58dd09778818"
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "LangSmithAuthError",
+          "evalue": "Authentication failed for /datasets. HTTPError('401 Client Error: Unauthorized for url: https://api.smith.langchain.com/datasets', '{\"detail\":\"Invalid token\"}')",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langsmith/utils.py\u001b[0m in \u001b[0;36mraise_for_status_with_text\u001b[0;34m(response)\u001b[0m\n\u001b[1;32m    149\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 150\u001b[0;31m         \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_for_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    151\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHTTPError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/requests/models.py\u001b[0m in \u001b[0;36mraise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1023\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mhttp_error_msg\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1024\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mHTTPError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhttp_error_msg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1025\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mHTTPError\u001b[0m: 401 Client Error: Unauthorized for url: https://api.smith.langchain.com/datasets",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langsmith/client.py\u001b[0m in \u001b[0;36mrequest_with_retries\u001b[0;34m(self, method, pathname, request_kwargs, stop_after_attempt, retry_on, to_ignore, handle_response, _context, **kwargs)\u001b[0m\n\u001b[1;32m    743\u001b[0m                         )\n\u001b[0;32m--> 744\u001b[0;31m                     \u001b[0mls_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_for_status_with_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    745\u001b[0m                     \u001b[0;32mreturn\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langsmith/utils.py\u001b[0m in \u001b[0;36mraise_for_status_with_text\u001b[0;34m(response)\u001b[0m\n\u001b[1;32m    151\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHTTPError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 152\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHTTPError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0me\u001b[0m  \u001b[0;31m# type: ignore[call-arg]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    153\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mHTTPError\u001b[0m: [Errno 401 Client Error: Unauthorized for url: https://api.smith.langchain.com/datasets] {\"detail\":\"Invalid token\"}",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mLangSmithAuthError\u001b[0m                        Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-85-e993c4ade851>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mdataset_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"John Wick\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m langsmith_dataset = client.create_dataset(\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mdataset_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdataset_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mdescription\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"John Wick \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langsmith/client.py\u001b[0m in \u001b[0;36mcreate_dataset\u001b[0;34m(self, dataset_name, description, data_type, inputs_schema, outputs_schema, transformations, metadata)\u001b[0m\n\u001b[1;32m   3237\u001b[0m             \u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"outputs_schema_definition\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0moutputs_schema\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3238\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3239\u001b[0;31m         response = self.request_with_retries(\n\u001b[0m\u001b[1;32m   3240\u001b[0m             \u001b[0;34m\"POST\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3241\u001b[0m             \u001b[0;34m\"/datasets\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/langsmith/client.py\u001b[0m in \u001b[0;36mrequest_with_retries\u001b[0;34m(self, method, pathname, request_kwargs, stop_after_attempt, retry_on, to_ignore, handle_response, _context, **kwargs)\u001b[0m\n\u001b[1;32m    777\u001b[0m                             )\n\u001b[1;32m    778\u001b[0m                         \u001b[0;32melif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus_code\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m401\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 779\u001b[0;31m                             raise ls_utils.LangSmithAuthError(\n\u001b[0m\u001b[1;32m    780\u001b[0m                                 \u001b[0;34mf\"Authentication failed for {pathname}. {repr(e)}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    781\u001b[0m                                 \u001b[0;34mf\"{_context}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mLangSmithAuthError\u001b[0m: Authentication failed for /datasets. HTTPError('401 Client Error: Unauthorized for url: https://api.smith.langchain.com/datasets', '{\"detail\":\"Invalid token\"}')"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for data_row in dataset.to_pandas().iterrows():\n",
+        "  client.create_example(\n",
+        "      inputs={\n",
+        "          \"question\": data_row[1][\"user_input\"]\n",
+        "      },\n",
+        "      outputs={\n",
+        "          \"answer\": data_row[1][\"reference\"]\n",
+        "      },\n",
+        "      metadata={\n",
+        "          \"context\": data_row[1][\"reference_contexts\"]\n",
+        "      },\n",
+        "      dataset_id=langsmith_dataset.id\n",
+        "  )"
+      ],
       "metadata": {
-        "id": "tTyKu2VpyrLo"
+        "id": "8KYJGANND6QL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Initialize langsmith client\n"
+      ],
+      "metadata": {
+        "id": "yi754mXDEPsX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from langchain.smith import RunEvalConfig\n",
+        "\n",
+        "\n",
+        "# Initialize the client\n",
+        "client = Client()\n",
+        "\n",
+        "\n",
+        "# Define your dataset name\n",
+        "dataset_name = \"John Wick\"\n",
+        "\n",
+        "# Create a run configuration\n",
+        "run_config = RunEvalConfig(\n",
+        "    evaluators=[],  # No evaluators for now, just running the chain\n",
+        "    custom_metrics={},  # No custom metrics for this run\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "EBuKBWVeEUCU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define a function that creates your chain\n",
+        "def create_chain():\n",
+        "    return naive_retrieval_chain\n",
+        "\n",
+        "session_name = \"John Wick Full Dataset Run\""
+      ],
+      "metadata": {
+        "id": "ga7FKJiSEd2b"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "experiment_run = client.run_on_dataset(\n",
+        "        dataset_name=dataset_name,\n",
+        "        llm_or_chain_factory=create_chain,\n",
+        "        evaluation=run_config,\n",
+        "        project_name=session_name,\n",
+        "        metadata={\n",
+        "            \"description\": \"Running full John Wick dataset to collect metrics, responses, and contexts\"\n",
+        "        }\n",
+        "    )"
+      ],
+      "metadata": {
+        "id": "7rGmSrVpEgPT"
       },
       "execution_count": null,
       "outputs": []
