--- a/13_Advanced_Retrieval/Advanced_Retrieval_with_LangChain_Assignment.ipynb
+++ b/13_Advanced_Retrieval/Advanced_Retrieval_with_LangChain_Assignment.ipynb
@@ -2205,7 +2205,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 432
+          "height": 415
         },
         "id": "z4sLgb7rhIyh",
         "outputId": "f099f126-30a9-4de9-91d3-6ef3cb8660e6"
@@ -3593,26 +3593,39 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Context Recall:\n",
+        "**Context Recall:**\n",
         "The Ensemble retriever performed best followed by Naive for the context recall. This can be because an Ensemble Retriever simply takes 2, or more, retrievers and combines their retrieved documents based on a rank-fusion algorithm. So the number of relevant documents sucessfully retrieved in case on Ensemble Retriever is higher in number.\n",
         "\n",
-        "Faithfulness:\n",
+        "**Faithfulness:**\n",
+        "\n",
         "Contextual compression performed best followed by Semantic retriever. This can be because contextual compression retrieves lots of documents that are likely related to our query vector. These documents are then compressed into a small set of more related documents using reranking algorithm. Due to this the response is more factually consistent with the retrieved context.\n",
         "\n",
-        "Factual correctness:\n",
+        "**Factual correctness:**\n",
+        "\n",
         "Multi query retriever performed best followed by naive though both the scores could hav ebeen mouch higher.\n",
         "\n",
-        "Answer relevancy:\n",
+        "**Answer relevancy:**\n",
+        "\n",
         "Multi query, contextual compression and ensembe performed best. The evaluation metric, Answer Relevancy, focuses on assessing how pertinent the generated answer is to the given prompt.\n",
         "\n",
-        "Context Entity Recall:\n",
+        "**Context Entity Recall:**\n",
+        "\n",
         "Ensemble has highest value among all retrievers but all the values for context entity recall are low.\n",
         "\n",
-        "Noise sensitivity relevant: Low value is considered good and indicates better performance. Noise sensitivity for Multi Query retriever is 0.\n",
+        "**Noise sensitivity relevant:**\n",
+        "\n",
+        "Low value is considered good and indicates better performance. Noise sensitivity for Multi Query retriever is 0.\n",
         "\n",
         "\n",
-        "Conclusion:\n",
-        "Ensember and naive performed good.\n",
+        "**Conclusion:**\n",
+        "\n",
+        "Ensember and Naive performed good.\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -3644,7 +3657,9 @@
         "\n",
         "Semantic: $4.51\n",
         "\n",
-        "The biggest cost is in case of Ensemble retriever and is loest in case of Parent-Document retriever."
+        "**Conclusion:**\n",
+        "\n",
+        "The biggest cost is in case of Ensemble retriever and is lowest in case of Parent-Document retriever."
       ],
       "metadata": {
         "id": "tESZ4Gkct0b0"
